Fixed map useEffect Hook dependencies - wrap the initialization of 'center' in its own useMemo() Hook - wrap the initialization of 'options' in its own useMemo() Hook
- Thatcher Ference <tbf20>

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -147,6 +147,10 @@ body, .section, #root {
   z-index:10;
 }
 
+input:focus {
+  outline: none;
+}
+
 #search-box {
   width: 60%;
   margin: 2.5%;
